# word-mcp-live

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RENDER_DEPLOYMENT.md  TOOLS.md  pyproject.toml  requirements.txt  setup_mcp.py
word_document_server/: defaults.py  main.py
word_document_server/core/: comment_writer.py  hyperlink_writer.py  table_com.py  tracked_changes.py  word_com.py  word_mac.py
word_document_server/tools/: __init__.py  comment_write_tools.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  format_tools.py  hyperlink_tools.py  layout_tools.py  live_layout_tools.py  live_read_tools.py  live_tools.py  protection_tools.py  screen_capture_tools.py  tracked_changes_tools.py
word_document_server/utils/: document_utils.py  extended_document_utils.py  file_utils.py  path_utils.py  save_utils.py  text_safety.py
